--- a/index.html
+++ b/index.html
@@ -3,9 +3,281 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fruit Burst with daisy UI</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.13/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="container mx-auto lg:px-24 px-8 my-8">
+            <div class="navbar bg-red-400 rounded-full px-8">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-5 w-5"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M4 6h16M4 12h8m-8 6h16" />
+                      </svg>
+                    </div>
+                    <ul
+                      tabindex="0"
+                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                      <li><a>Home</a></li>
+                      <li><a>About</a></li>
+                      <li><a>Shop</a></li>
+                      <li><a>Contract</a></li>
+                  </div>
+                  <div class="space-x-4 hidden lg:flex text-white font-samibold">
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">Shop</a>
+                    <a href="">Contract</a>
+                  </div>
+                </div>
+                <div class="navbar-center lg:flex">
+                    <div class="lg:flex lg:ml-2 ml-12 w-4 lg:w-[50px] ">
+                        <img src="images/logo.png" alt="">
+                    </div>
+                    <div>
+                        <h6 class="lg:ml-4 ml-2 lg:text-2xl text-white font-semibold">Fruit Burst</h6>
+                    </div>
+                </div>
+                <div class="navbar-end">
+                  <div class="bg-white hidden lg:flex item-conter justify-between px-6 py-2 rounded-full">
+                    <input type="text" placeholder="search">
+                    <img src="images/Search.png" alt="">
+                  </div>
+                </div>
+              </div>
+        </div>     
+    </header>
+    <main>
+        <div class="container mx-auto lg:px-24 px-8 my-8">
+            <div class="carousel w-full">
+                <div id="slide1" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/banner1.png)] bg-center bg-cover h-[80vh] flex justify-center items-center">
+                  <div class="absolute lg:top-10 top-5 lg:right-10 right-5 bg-red-400 lg:px-4 px-2 lg:py-2 text-white">
+                    <h6>Hot deal!</h6>
+                  </div>
+                    <div class="flex flex-col items-center ">
+                        <h1 class="lg:text-6xl text-2xl text-white font-bold text-center">Exotic tastes at your <br> doorstep</h1>
+                        <p class="text-white text-center w-2/3 mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non nostrum perspiciatis tempore, dolores deserunt praesentium.</p>
+                        <button class="btn bg-red-400 border-none text-white mt-2">Button</button>
+                    </div>
+                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/banner2.png)] bg-center bg-cover h-[80vh] flex justify-center items-center">
+                    <div class="flex flex-col items-center ">
+                        <h1 class="lg:text-6xl text-2xl text-white font-bold text-center">Exotic tastes at your <br> doorstep</h1>
+                        <p class="text-white text-center w-2/3 mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non nostrum perspiciatis tempore, dolores deserunt praesentium.</p>
+                        <button class="btn bg-red-400 border-none text-white mt-2">Button</button>
+                    </div>
+                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/banner3.png)] bg-center bg-cover h-[80vh] flex justify-center items-center">
+                    <div class="flex flex-col items-center ">
+                        <h1 class="lg:text-6xl text-2xl text-white font-bold text-center">Exotic tastes at your <br> doorstep</h1>
+                        <p class="text-white text-center w-2/3 mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non nostrum perspiciatis tempore, dolores deserunt praesentium.</p>
+                        <button class="btn bg-red-400 border-none text-white mt-2">Button</button>
+                    </div>
+                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/banner4.png)] bg-center bg-cover h-[80vh] flex justify-center items-center">
+                    <div class="flex flex-col items-center ">
+                        <h1 class="lg:text-6xl text-2xl text-white font-bold text-center">Exotic tastes at your <br> doorstep</h1>
+                        <p class="text-white text-center w-2/3 mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non nostrum perspiciatis tempore, dolores deserunt praesentium.</p>
+                        <button class="btn bg-red-400 border-none text-white mt-2">Button</button>
+                    </div>
+                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+              </div> 
+              <div class="h-[20vh] w-2/3 bg-white shadow-lg rounded-lg mx-auto -translate-y-24 hidden lg:flex justify-center">
+                <div class="flex justify-around items-center space-x-4">
+                    <img src="images/fruit1.png" alt="">
+                    <img src="images/fruit2.png" alt="">
+                    <img src="images/fruit3.png" alt="">
+                    <img src="images/fruit4.png" alt="">
+                    <img src="images/fruit5.png" alt="">
+                </div>
+              </div>
+        </div>
+        <section class="container mx-auto lg:px-24 px-8 my-8">
+          <div class="flex lg:flex-row flex-col justify-between items-center">
+            <div>
+              <h2 class="text-4xl font-bold mb-2 lg:text-start text-center">Deal of the day</h2>
+              <p class="lg:w-2/3 text-lg opcatity-80 lg:mb-2 mb-2 lg:text-start text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div>
+              <div class="grid auto-cols-max grid-flow-col gap-5 text-center">
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl">
+                    <span style="--value:15;"></span>
+                  </span>
+                  days
+                </div>
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl">
+                    <span style="--value:10;"></span>
+                  </span>
+                  hours
+                </div>
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl">
+                    <span style="--value:24;"></span>
+                  </span>
+                  min
+                </div>
+                <div class="flex flex-col">
+                  <span class="countdown font-mono text-5xl">
+                    <span style="--value:${counter};"></span>
+                  </span>
+                  sec
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="mt-12 grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4">
+              <div class="shadow-lg rounded-md flex flex-col space-y-2 justify-center items-center px-4 py-6">
+                <img src="images/fruit6.png" alt="">
+                <h6>12.90$ - 18.85$</h6>
+                <div class="flex w-full flex-col border-opacity-50">
+                  <div class="divider"></div>
+                </div>
+                <p>Apples</p>
+                <div>
+                  <div class="rating rating-lg rating-half">
+                    <input type="radio" name="rating-10" class="rating-hidden" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input
+                      type="radio"
+                      name="rating-10"
+                      class="mask mask-star-2 mask-half-1 bg-green-500"
+                      checked="checked" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                  </div>
+                </div>
+                <button class="btn btn-ghost text-red-400">Details</button>
+              </div>
+              <div class="shadow-lg rounded-md flex flex-col space-y-2 justify-center items-center px-4 py-6">
+                <img src="images/fruit7.png" alt="">
+                <h6>12.90$ - 18.85$</h6>
+                <div class="flex w-full flex-col border-opacity-50">
+                  <div class="divider"></div>
+                </div>
+                <p>Orange</p>
+                <div>
+                  <div class="rating rating-lg rating-half">
+                    <input type="radio" name="rating-10" class="rating-hidden" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input
+                      type="radio"
+                      name="rating-10"
+                      class="mask mask-star-2 mask-half-1 bg-green-500"
+                      checked="checked" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                  </div>
+                </div>
+                <button class="btn btn-ghost text-red-400">Details</button>
+              </div>
+              <div class="shadow-lg rounded-md flex flex-col space-y-2 justify-center items-center px-4 py-6">
+                <img src="images/fruit8.png" alt="">
+                <h6>12.90$ - 18.85$</h6>
+                <div class="flex w-full flex-col border-opacity-50">
+                  <div class="divider"></div>
+                </div>
+                <p>Red Dragon</p>
+                <div>
+                  <div class="rating rating-lg rating-half">
+                    <input type="radio" name="rating-10" class="rating-hidden" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input
+                      type="radio"
+                      name="rating-10"
+                      class="mask mask-star-2 mask-half-1 bg-green-500"
+                      checked="checked" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                  </div>
+                </div>
+                <button class="btn btn-ghost text-red-400">Details</button>
+              </div>
+              <div class="shadow-lg rounded-md flex flex-col space-y-2 justify-center items-center px-4 py-6">
+                <img src="images/fruit9.png" alt="">
+                <h6>12.90$ - 18.85$</h6>
+                <div class="flex w-full flex-col border-opacity-50">
+                  <div class="divider"></div>
+                </div>
+                <p>Banana</p>
+                <div>
+                  <div class="rating rating-lg rating-half">
+                    <input type="radio" name="rating-10" class="rating-hidden" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input
+                      type="radio"
+                      name="rating-10"
+                      class="mask mask-star-2 mask-half-1 bg-green-500"
+                      checked="checked" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-green-500" />
+                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-green-500" />
+                  </div>
+                </div>
+                <button class="btn btn-ghost text-red-400">Details</button>
+              </div>
+            </div>
+          </div>
+          <div class="text-center mt-12">
+            <button class="btn bg-red-400 border-none text-white mt-2">Shop All</button>
+          </div>
+        </section>
+    </main>
 </body>
 </html>
