--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Fruit Burst with daisy UI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.13/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -276,6 +277,54 @@
           </div>
           <div class="text-center mt-12">
             <button class="btn bg-red-400 border-none text-white mt-2">Shop All</button>
+          </div>
+        </section>
+        <section class="container mx-auto lg:px-24 px-8 my-8 space-y-2">
+          <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.7),rgba(0,0,0,0.10)),url(images/banner1.png)] bg-center bg-cover lg:h-[80vh] h-[300vh] w-full rounded-lg flex justify-center items-center flex-col lg:space-y-2 space-x-4">
+            <h1 class="text-white lg:text-6xl text-2xl">Meet the team section</h1>
+            <p class="text-white lg:w-1/3 text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,</p>
+            <div class="grid grid-cols-1 lg:grid-cols-4 lg:gap-12 gap-2 mt-2 space-y-4">
+              <div class="flex flex-col justify-center items-center lg:space-y-2">
+                <img src="images/member1.png" alt="">
+                <h6 class="text-white">Awlad Hossain</h6>
+                <p class="text-white">Fruits Expert</p>
+                <div class="flex space-x-2 justify-center items-center">
+                  <i class="fa-brands fa-facebook bg-red-400 text-white rounded-full p-[4px]"></i>
+                  <i class="fa-brands fa-square-twitter bg-red-400 text-white rounded-full p-[4px]"></i>
+                  <i class="fa-brands fa-linkedin bg-red-400 text-white rounded-full p-[4px]"></i>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center lg:space-y-2">
+                <img src="images/member2.png" alt="">
+                <h6 class="text-white">Safia Chowdhury</h6>
+                <p class="text-white">Fruits Expert</p>
+                <div class="flex space-x-2 justify-center items-center">
+                  <i class="fa-brands fa-facebook bg-red-400 text-white rounded-full p-[4px]"></i>
+                  <i class="fa-brands fa-square-twitter bg-red-400 text-white rounded-full p-[4px]"></i>
+                  <i class="fa-brands fa-linkedin bg-red-400 text-white rounded-full p-[4px]"></i>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center lg:space-y-2">
+                <img src="images/member3.png" alt="">
+                <h6 class="text-white">Rokib Hossain</h6>
+                <p class="text-white">Fruits Expert</p>
+                <div class="flex space-x-2 justify-center items-center">
+                  <i class="fa-brands fa-facebook bg-red-400 text-white rounded-full p-[4px]"></i>
+                  <i class="fa-brands fa-square-twitter bg-red-400 text-white rounded-full p-[4px]"></i>
+                  <i class="fa-brands fa-linkedin bg-red-400 text-white rounded-full p-[4px]"></i>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center lg:space-y-2">
+                <img src="images/member4.png" alt="">
+                <h6 class="text-white">Chaity</h6>
+                <p class="text-white">Fruits Expert</p>
+                <div class="flex space-x-2 justify-center items-center">
+                  <i class="fa-brands fa-facebook bg-red-400 text-white rounded-full p-[4px]"></i>
+                  <i class="fa-brands fa-square-twitter bg-red-400 text-white rounded-full p-[4px]"></i>
+                  <i class="fa-brands fa-linkedin bg-red-400 text-white rounded-full p-[4px]"></i>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
     </main>
