completed footer properly

--- a/index.html
+++ b/index.html
@@ -403,5 +403,27 @@
           </div>
         </section>
     </main>
+    <footer class="w-full lg:h-[40vh] bg-black flex flex-col justify-center items-center space-y-6 pb-8">
+      <div class="flex justify-center items-center space-x-2 mt-8">
+        <img class="w-[40px]" src="images/logo.png" alt="">
+        <h1 class="text-white font-bold lg:text-2xl">Fruit Burst</h1>
+      </div>
+      <div class="text-white space-x-4 lg:px-2 px-12 text-center">
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Shop</a>
+        <a href="">All Fruits</a>
+        <a href="">Support</a>
+        <a href="">My Account</a>
+      </div>
+      <div class="flex space-x-4 justify-center items-center ">
+        <i class="fa-brands fa-twitter text-white"></i>
+        <i class="fa-brands fa-facebook bg-blue text-white"></i>
+        <i class="fa-brands fa-youtube bg-white text-red"></i>
+        <i class="fa-brands fa-linkedin-in text-white"></i>
+        <i class="fa-brands fa-square-instagram text-white"></i>
+        <i class="fa-brands fa-apple text-white"></i>
+      </div>
+    </footer>
 </body>
 </html>
